<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="354dp"
        android:layout_height="485dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <Switch
                android:id="@+id/enablenotif"
                android:layout_width="76dp"
                android:layout_height="58dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="408dp"
                app:layout_constraintStart_toEndOf="@+id/notif"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="195dp"
                android:layout_height="47dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="176dp"
                android:hint="Email"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText">

            </EditText>

            <TextView
                android:id="@+id/geo"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="356dp"
                android:text="GeoLocation:"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/notif"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="420dp"
                android:text="Notifications:"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="237dp"
                android:layout_height="43dp"
                android:layout_marginTop="288dp"
                android:text="Preferences"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editName"
                android:layout_width="195dp"
                android:layout_height="46dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="124dp"
                android:hint="Name"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText">

            </EditText>

            <TextView
                android:layout_width="174dp"
                android:layout_height="68dp"
                android:layout_marginTop="24dp"
                android:text="Profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/editpfp"
                android:layout_width="111dp"
                android:layout_height="87dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_person_24" />

            <Switch
                android:id="@+id/enablegeo"
                android:layout_width="77dp"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="344dp"
                app:layout_constraintStart_toEndOf="@+id/geo"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/delete_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/secondary_button"
        android:text="Delete User"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/remove_image" />
    <Button
        android:id="@+id/remove_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/secondary_button"
        android:text="Delete Image"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_user"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/back_button_user_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/secondary_button"
        android:text="BACK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>